Add mostly complete skeleton for parallel libtrace
This should act as a good starting point for anyone developing
parallel libtrace programs.

--- a/examples/skeleton/Makefile.am
+++ b/examples/skeleton/Makefile.am
@@ -1,9 +1,10 @@
 
-noinst_PROGRAMS=trivial complete event output
+noinst_PROGRAMS=trivial complete event output parallel
 
 include ../Makefile.examples
 trivial_SOURCES=trivial.c
 complete_SOURCES=complete.c
 event_SOURCES=event.c
 output_SOURCES=output.c
+parallel_SOURCES=parallel.c
 
