Fix various build errors and warnings on OS X

--- a/tools/traceanon/Makefile.am
+++ b/tools/traceanon/Makefile.am
@@ -7,4 +7,5 @@ include ../Makefile.tools
 #traceanon_SOURCES = traceanon.c rijndael.h rijndael.c panon.h panon.c ipenc.c ipenc.h 
 traceanon_SOURCES = traceanon.cc Anon.cc Anon.h
 
-traceanon_CPPFLAGS = $(AM_CPPFLAGS)
+# Stupid Apple decided to deprecate the low-level OpenSSL EVP functions
+traceanon_CPPFLAGS = $(AM_CPPFLAGS) -Wno-deprecated-declarations
