Updated format_rt to use new bucket structure
This should save us from having to memcpy every packet from the read
buffer into the packet buffer.

Added an internalid and srcbucket reference to the libtrace_packet_t
structure, so that trace_fin_packet() can release packets from any buckets
that they are owned by.

Fix race condition on trace->last_packet.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -547,6 +547,8 @@ typedef struct libtrace_packet_t {
 	uint64_t order; /**< Notes the order of this packet in relation to the input */
 	uint64_t hash; /**< A hash of the packet as supplied by the user */
 	int error; /**< The error status of pread_packet */
+        uint64_t internalid;            /** Internal indentifier for the pkt */
+        void *srcbucket;
 } libtrace_packet_t;
 
 
