--- a/configure.in
+++ b/configure.in
@@ -215,6 +215,7 @@ AC_CHECK_LIB(crypto, EVP_EncryptInit_ex, cryptofound=1, cryptofound=0)
 # Check for libpcap
 AC_CHECK_LIB(pcap,pcap_next_ex,pcapfound=1,pcapfound=0)
 AC_CHECK_LIB(pcap,pcap_create,pcapcreate=1,pcapcreate=0)
+AC_CHECK_LIB(pcap,pcap_set_immediate_mode,pcapimmediate=1,pcapimmediate=0)
 AC_CHECK_DECLS([BIOCSETIF],,,[
 #include <sys/types.h>
 #include <sys/time.h>
@@ -259,6 +260,10 @@ fi
 if test "$pcapcreate" = 1; then
 	AC_DEFINE([HAVE_PCAP_CREATE],1,[compile with libpcap 1.0 support])
 fi
+
+if test "$pcapimmediate" = 1; then
+        AC_DEFINE([HAVE_PCAP_IMMEDIATE],1,[able to use pcap_set_immediate_mode])
+fi        
 
 # Configure options for use of DAG cards
 # Originally borrowed from libpcap, but extended quite a bit :)
