Started adding support for PF_RING
Very early stages -- basically it compiles and can possibly be used
with the original API, but I haven't tested it yet.

Still TODO:
  test using basic libtrace examples
  event API support
  parallel support
  RT support

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -49,6 +49,10 @@ export CFLAGS += $(SAVED_CFLAGS)
 export CXXFLAGS += $(SAVED_CXXFLAGS)
 endif
 
+if HAVE_PFRING
+NATIVEFORMATS += format_pfring.c
+endif
+
 libtrace_la_SOURCES = trace.c trace_parallel.c common.h \
 		format_erf.c format_pcap.c format_legacy.c \
 		format_rt.c format_helper.c format_helper.h format_pcapfile.c \
