--- a/configure.in
+++ b/configure.in
@@ -423,6 +423,35 @@ if test "$want_dpdk" != no; then
 	fi
 fi
 
+# Check for PF_RING 
+AC_ARG_WITH(pfring,
+	    AS_HELP_STRING(--with-pfring,include PF_RING live capture support (if PF_RING libraries are available)),
+[
+        if test "$withval" = no
+        then
+            want_pfring=no
+        else
+            want_pfring=ifpresent
+        fi
+],[
+        want_pfring=ifpresent
+])
+
+
+
+libtrace_pfring=false
+if test "$want_pfring" != no; then
+	# bit annoying that we have to include extra libs to account for
+	# optional pfring modules that depend on these libs
+	AC_SEARCH_LIBS(pfring_recv, pfring, pfring_found=1, pfring_found=0,[-ldag -lpcap])
+	if test "$pfring_found" = 1; then
+		ADD_LIBS="$ADD_LIBS -lpfring"
+		LIBTRACE_LIBS="$LIBTRACE_LIBS -lpfring"
+		AC_DEFINE(HAVE_PFRING,1,[conditional for building with DAG live capture support])
+		libtrace_pfring=true
+	fi	
+fi
+
 # Check for PACKET_FANOUT (borrowed from Suricata)
 AC_CHECK_DECL([PACKET_FANOUT],
         AC_DEFINE([HAVE_PACKET_FANOUT],[1],
@@ -588,6 +617,7 @@ AS_IF([test "x$have_ncurses" = "xyes"], [
 # Define automake conditionals for use in our Makefile.am files
 AM_CONDITIONAL([HAVE_BPF_CAPTURE], [test "$ac_cv_have_decl_BIOCSETIF" = yes ])
 AM_CONDITIONAL([HAVE_DAG], [test "$libtrace_dag" = true])
+AM_CONDITIONAL([HAVE_PFRING], [test "$libtrace_pfring" = true])
 AM_CONDITIONAL([HAVE_DPDK], [test "$libtrace_dpdk" = true])
 AM_CONDITIONAL([DAG2_4], [test "$libtrace_dag_version" = 24])
 AM_CONDITIONAL([DAG2_5], [test "$libtrace_dag_version" = 25])
@@ -669,6 +699,13 @@ elif test x"$want_dpdk" != "xno"; then
 	AC_MSG_NOTICE([Compiled with DPDK live capture support: No])
 	AC_MSG_NOTICE([Note: Requires DPDK v1.5 or newer])
 fi
+
+if test x"$libtrace_pfring" = xtrue; then
+	AC_MSG_NOTICE([Compiled with PF_RING live capture support: Yes])
+else
+	AC_MSG_NOTICE([Compiled with PF_RING live capture support: No])
+fi
+
 reportopt "Compiled with LLVM BPF JIT support" $JIT
 reportopt "Building man pages/documentation" $libtrace_doxygen
 reportopt "Building tracetop (requires libncurses)" $with_ncurses
