--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -391,6 +391,7 @@ enum base_format_t {
 	TRACE_FORMAT_LINUX_RING	  =15,	/**< Linux native interface capture PACKET_MMAP */
 	TRACE_FORMAT_RAWERF	  =16,	/**< Special format for reading uncompressed ERF traces without checking for compression */
     TRACE_FORMAT_DPDK     =17, /**< The Intel Data Plane Development Kit format */
+	TRACE_FORMAT_PFRING	  =18,
 };
 
 /** RT protocol packet types */
@@ -444,6 +445,9 @@ typedef enum {
 	TRACE_RT_DATA_LINUX_RING=TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_LINUX_RING,
     /** RT is encapsulating a Intel DPDK capture record */
 	TRACE_RT_DATA_DPDK=TRACE_RT_DATA_SIMPLE+TRACE_FORMAT_DPDK,
+
+	/** RT is encapsulating a PF_RING capture record */
+	TRACE_RT_DATA_PFRING = TRACE_RT_DATA_SIMPLE + TRACE_FORMAT_PFRING,
 
 	/** As PCAP does not store the linktype with the packet, we need to 
 	 * create a separate RT type for each supported DLT, starting from
