Make sure trace_create_packet() doesn't segfault
If allocating memory for the new packet fails, we now return NULL
instead of carrying on and trying to initialise the packet fields.

This has always been the intended behaviour (see some of the examples
for cases where we check if packet is NULL after calling trace_create_packet())
but I guess nobody actually implemented it...

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1424,7 +1424,8 @@ uint64_t trace_get_accepted_packets(libtrace_t *trace);
 
 /** Create a new packet object
  *
- * @return A pointer to an initialised libtrace_packet_t object
+ * @return A pointer to an initialised libtrace_packet_t object, or NULL if
+ * libtrace is unable to allocate space for a new packet.
  */
 DLLEXPORT libtrace_packet_t *trace_create_packet(void);
 
