Updates DPDK to latest release and improves performance
Thanks to Richard Cziva for supplying an intial patch for this.

We now recommend using the latest release of DPDK, ideally 16.04 or newer

To support newer releases
* Fixes RSS hashing renames
* Fixes deprecated rte_mempool_count
* Fixes ETH_LINK_SPEED_X rename
* Fixes TX minimum memory requirement
* Fixes dropped vs errored counting in recent versions (for best results use 16.04 or newer)

Tuned to allow DPDK's SSE vector in supporting drivers mode for better performance.
Bumps default internal batch size up to 32 to matches DPDK in SSE vector mode.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -259,7 +259,7 @@ typedef struct callback_set libtrace_callback_set_t;
 
 /** If the packet has allocated its own memory the buffer_control should be
  * set to TRACE_CTRL_PACKET, so that the memory will be freed when the packet
- * is destroyed. If the packet has been zerocopied out of memory owned by
+ * is destroyed. If the packet has been zero-copied out of memory owned by
  * something else, e.g. a DAG card, it should be TRACE_CTRL_EXTERNAL.
  *
  * @note The letters p and e are magic numbers used to detect if the packet
@@ -281,7 +281,7 @@ typedef struct trace_err_t{
 
 /** Enumeration of error codes */
 enum {
-	/** No Error has occured.... yet. */
+	/** No Error has occurred.... yet. */
 	TRACE_ERR_NOERROR 	= 0,
 	/** The URI passed to trace_create() is unsupported, or badly formed */
 	TRACE_ERR_BAD_FORMAT 	= -1,
@@ -335,7 +335,7 @@ typedef enum {
 	TRACE_DLT_OPENBSD_LOOP = 108,
 #endif
 	TRACE_DLT_PPP_SERIAL = 50,
-	TRACE_DLT_LINKTYPE_RAW = 101, /**< See TRACE_DLT_RAW for explainations of pain. */
+	TRACE_DLT_LINKTYPE_RAW = 101, /**< See TRACE_DLT_RAW for explanations of pain. */
 	TRACE_DLT_C_HDLC = 104,
 	TRACE_DLT_IEEE802_11 = 105,
 	TRACE_DLT_LINUX_SLL = 113,
@@ -547,7 +547,7 @@ typedef struct libtrace_packet_t {
 	uint64_t order; /**< Notes the order of this packet in relation to the input */
 	uint64_t hash; /**< A hash of the packet as supplied by the user */
 	int error; /**< The error status of pread_packet */
-        uint64_t internalid;            /** Internal indentifier for the pkt */
+        uint64_t internalid;            /** Internal identifier for the pkt */
         void *srcbucket;
 } libtrace_packet_t;
 
@@ -575,7 +575,7 @@ typedef enum {
     TRACE_RADIOTAP_DBM_ANTNOISE = 6, /**< Noise power in dBm (int8) */
     TRACE_RADIOTAP_LOCK_QUALITY = 7, /**< Barker Code lock quality (uint16) */
     TRACE_RADIOTAP_TX_ATTENUATION = 8, /**< TX attenuation as unitless distance from max power (uint16) */
-    TRACE_RADIOTAP_DB_TX_ATTENUATION = 9, /**< TX attenutation as dB from max power (uint16) */
+    TRACE_RADIOTAP_DB_TX_ATTENUATION = 9, /**< TX attenuation as dB from max power (uint16) */
     TRACE_RADIOTAP_DBM_TX_POWER = 10, /**< TX Power in dBm (int8) */
     TRACE_RADIOTAP_ANTENNA = 11, /**< Antenna frame was rx'd or tx'd on (uint8) */
     TRACE_RADIOTAP_DB_ANTSIGNAL = 12, /**< Signal power in dB from a fixed reference (uint8) */
@@ -1181,7 +1181,7 @@ DLLEXPORT void trace_interrupt(void);
  * @param uri		The uri to be parsed
  * @param [out] format	A pointer that will be updated to point to an allocated 
  * 			string holding the format component of the URI
- * @return NULL if an error occured, otherwise return a pointer to the uridata 
+ * @return NULL if an error occurred, otherwise return a pointer to the uridata 
  * component
  *
  * @note The format component is strdup'd by this function, so be sure to free
@@ -1206,9 +1206,9 @@ DLLEXPORT const char *trace_parse_uri(const char *uri, char **format);
  *  - rt:hostname
  *  - rt:hostname:port
  *
- *  If an error occured when attempting to open the trace file, a
+ *  If an error occurred when attempting to open the trace file, a
  *  trace is still returned so trace_is_err() should be called to find out
- *  if an error occured. The trace is created in the configuration state, you 
+ *  if an error occurred. The trace is created in the configuration state, you 
  *  must call trace_start before attempting to read packets from the trace.
  */
 DLLEXPORT libtrace_t *trace_create(const char *uri);
@@ -1237,7 +1237,7 @@ DLLEXPORT libtrace_t *trace_create_dead(const char *uri);
  *  - erf:/path/to/erf/file
  *  - pcap:/path/to/pcap/file
  *
- *  If an error occured when attempting to open the output trace, a trace is 
+ *  If an error occurred when attempting to open the output trace, a trace is 
  *  still returned but trace_errno will be set. Use trace_is_err_out() and 
  *  trace_perror_output() to get more information.
  */
@@ -1376,7 +1376,7 @@ typedef enum {
 	TRACE_OPTION_OUTPUT_COMPRESSTYPE
 } trace_option_output_t;
 
-/* To add a new stat field update this list, and the relevent places in
+/* To add a new stat field update this list, and the relevant places in
  * libtrace_stat_t structure.
  */
 /** An X Macro set for libtrace stat fields */
@@ -1429,7 +1429,7 @@ typedef struct libtrace_stat_t {
 	 */
 	uint64_t filtered;
 
-	/** The total number of good packets which have been recevied. Including
+	/** The total number of good packets which have been received. Including
 	 * those which are dropped and filtered. This does not include errors.
 	 *
 	 * @note This may include a small number of buffered packets
@@ -1609,7 +1609,7 @@ uint64_t trace_get_accepted_packets(libtrace_t *trace);
 /**
  * Returns statistic counters for a trace, for a parallel trace this is a
  * combined total.
- * Where possible these are retrived atomically, however this behaviour depends
+ * Where possible these are retrieved atomically, however this behaviour depends
  * on the underlying trace format.
  *
  * @param trace The input trace to examine.
@@ -1630,11 +1630,11 @@ libtrace_stat_t *trace_get_statistics(libtrace_t *trace, libtrace_stat_t *stats)
 
 /**
  * Returns statistic counters for a single thread of a trace.
- * Where possible these are retrived atomically, however this behaviour depends
+ * Where possible these are retrieved atomically, however this behaviour depends
  * on the underlying trace format.
  *
  * @param trace The input trace to examine.
- * @param t An optional thread to received stats for or NULL to retrive stats
+ * @param t An optional thread to received stats for or NULL to retrieve stats
  *          for the current thread
  * @param stats Filled upon return with statistics about the trace, check the
  *              flags included to see if a given statistic is valid.
@@ -1733,7 +1733,7 @@ DLLEXPORT libtrace_packet_t *trace_create_packet(void);
  * @note This always involves a copy, which can be slow.  Use of this 
  * function should be avoided where possible.
  * 
- * @par The reason you would want to use this function is that a zerocopied
+ * @par The reason you would want to use this function is that a zero-copied
  * packet from a device will be stored using memory owned by the device which
  * may be a limited resource. Copying the packet will ensure that the packet
  * is now stored in memory owned and managed by libtrace.
@@ -2692,7 +2692,7 @@ void *trace_get_ospf_contents_v2(libtrace_ospf_v2_t *header,
  * first LSA.
  *
  * @note This function only works for OSPF version 2 packets.
- * @note trace_get_next_ospf_lsa_v2() should be subequently used to process the LSAs
+ * @note trace_get_next_ospf_lsa_v2() should be subsequently used to process the LSAs
  */
 DLLEXPORT SIMPLE_FUNCTION 
 unsigned char *trace_get_first_ospf_lsa_from_update_v2(
@@ -2715,7 +2715,7 @@ unsigned char *trace_get_first_ospf_lsa_from_update_v2(
  * the first LSA.
  *
  * @note This function only works for OSPF version 2 packets.
- * @note trace_get_next_ospf_lsa_header_v2() should be subequently used to process the LSA headers
+ * @note trace_get_next_ospf_lsa_header_v2() should be subsequently used to process the LSA headers
  */
 DLLEXPORT SIMPLE_FUNCTION 
 unsigned char *trace_get_first_ospf_lsa_from_db_desc_v2(
@@ -2738,7 +2738,7 @@ unsigned char *trace_get_first_ospf_lsa_from_db_desc_v2(
  * from the start of the first Link.
  *
  * @note This function only works for OSPF version 2 packets.
- * @note trace_get_next_ospf_link_v2() should be subequently used to process
+ * @note trace_get_next_ospf_link_v2() should be subsequently used to process
  * the links
  */
 DLLEXPORT SIMPLE_FUNCTION
