Add new format for receiving and parsing nDAG records
Also added new statistic: missing_records -- this tracks records
that have gone missing between the original capture device and
the current processing host (i.e. lost on the network between the
two). Useful for nDAG as there is a distinction between packets
dropped by the DAG and packets that were not received by the nDAG
client.

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -61,7 +61,7 @@ libtrace_la_SOURCES = trace.c trace_parallel.c common.h \
 		protocols_pktmeta.c protocols_l2.c protocols_l3.c \
 		protocols_transport.c protocols.h protocols_ospf.c \
 		protocols_application.c \
-		$(DAGSOURCE) format_erf.h \
+		$(DAGSOURCE) format_erf.h format_ndag.c format_ndag.h \
 		$(BPFJITSOURCE) \
 		libtrace_arphrd.h \
 		data-struct/ring_buffer.c data-struct/vector.c \
