Added code path in format_ndag for machines without recvmmsg.
The performance will likely be terrible and the code is completely
untested, but at least libtrace will compile on those systems.

--- a/configure.in
+++ b/configure.in
@@ -125,7 +125,7 @@ AC_PROG_LIBTOOL
 AC_PROG_GCC_TRADITIONAL
 
 # Fail if any of these functions are missing
-AC_CHECK_FUNCS(socket strdup strlcpy strcasecmp strncasecmp snprintf vsnprintf)
+AC_CHECK_FUNCS(socket strdup strlcpy strcasecmp strncasecmp snprintf vsnprintf recvmmsg)
 
 AC_CHECK_SIZEOF([long int])
 
