Add TRACE_ERR_WANDIO_FAILED for wandio error reporting.
Passing an errcode of 0 to trace_set_err triggers the assertion at
format_helper.c:290, making the error unrecoverable for the calling
code. This happens when the wandio layer encounters an error while
errno is still 0 (for example, an incomplete pcap packet).

To make the error recoverable, pass in TRACE_ERR_WANDIO_FAILED instead
of errno.

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -304,7 +304,9 @@ enum {
 	/** RT communication breakdown */
 	TRACE_ERR_RT_FAILURE    = -10,
 	/** Compression format unsupported */
-	TRACE_ERR_UNSUPPORTED_COMPRESS 	= -11
+	TRACE_ERR_UNSUPPORTED_COMPRESS 	= -11,
+        /** Wandio has returned an error */
+        TRACE_ERR_WANDIO_FAILED = -12  
 };
 
 /** Enumeration of DLTs supported by libtrace 
