--- a/configure.in
+++ b/configure.in
@@ -214,6 +214,7 @@ AC_CHECK_LIB(crypto, EVP_EncryptInit_ex, cryptofound=1, cryptofound=0)
 if test "$cryptofound" = 1; then
 	AC_CHECK_HEADER(openssl/evp.h, cryptofound=1, cryptofound=0)
 fi
+AC_CHECK_LIB(tasn1, asn1_array2tree, asn1found=1, asn1found=0)
 
 # Check for libpcap
 AC_CHECK_LIB(pcap,pcap_next_ex,pcapfound=1,pcapfound=0)
@@ -515,6 +516,15 @@ else
         have_crypto=no
 fi
 
+if test "$asn1found" = 1; then
+        AC_DEFINE(HAVE_LIBTASN1, 1, [Set to 1 if libtasn1 is available])
+	LIBTRACE_LIBS="$LIBTRACE_LIBS -ltasn1"
+        TOOLS_LIBS="$TOOLS_LIBS -ltasn1"
+        have_asn1=yes
+else
+        have_asn1=no
+fi
+
 if test "$have_nsl" = 1; then
 	if test "$ac_cv_search_inet_ntop" != "none required"; then
 		LIBTRACE_LIBS="$LIBTRACE_LIBS $ac_cv_search_inet_ntop"
@@ -694,6 +704,7 @@ elif test x"$want_dpdk" != "xno"; then
 	AC_MSG_NOTICE([Note: Requires DPDK v1.5 or newer])
 fi
 reportopt "Compiled with LLVM BPF JIT support" $JIT
+reportopt "Compiled with live ETSI LI support (requires libtasn1)" $have_asn1
 reportopt "Building man pages/documentation" $libtrace_doxygen
 reportopt "Building tracetop (requires libncurses)" $with_ncurses
 reportopt "Building traceanon with CryptoPan (requires libcrypto and openssl/evp.h)" $have_crypto
