trace_prepare_packet is now an external API function
Previously it was for internal use only, but I now have a use
case where it makes sense to have access to it externally
(specifically: "casting" DAG buffer pointers to libtrace packets
so I can dynamically snap them without having the overhead of
the whole of libtrace).

--- a/lib/libtrace.h.in
+++ b/lib/libtrace.h.in
@@ -1792,6 +1792,50 @@ DLLEXPORT void trace_destroy_packet(libtrace_packet_t *packet);
  */
 DLLEXPORT int trace_read_packet(libtrace_t *trace, libtrace_packet_t *packet);
 
+/** Converts the data provided in buffer into a valid libtrace packet
+ *
+ * @param trace         An input trace of the same format as the "packet" 
+ *                      contained in the buffer
+ * @param packet        The libtrace packet to prepare
+ * @param buffer        A buffer containing the packet data, including the
+ *                      capture format header
+ * @param rt_type       The RT type for the packet that is being prepared
+ * @param flags         Used to specify options for the preparation function,
+ *                      e.g. who owns the packet buffer
+ *
+ * @return -1 if an error occurs, 0 otherwise 
+ *
+ * Packet preparation is a tricky concept - the idea is to take the data
+ * pointed to by 'buffer' and treat it as a packet record of the same capture
+ * format as that used by the input trace. The provided libtrace packet then
+ * has its internal pointers and values set to describe the packet record in
+ * the buffer. 
+ *
+ * The primary use of this function is to allow the RT packet reader to 
+ * easily and safely convert packets from the RT format back into the format
+ * that they were originally captured with., essentially removing the RT
+ * encapsulation.
+ *
+ * This function is now available via the exported API, as it can have some
+ * uses outside of internal libtrace contexts. However, we strongly advise
+ * that you avoid using this function unless you really know what you are
+ * doing.
+ */
+DLLEXPORT int trace_prepare_packet(libtrace_t *trace, libtrace_packet_t *packet,
+                void *buffer, libtrace_rt_types_t rt_type, uint32_t flags);
+
+/** Flags for prepare_packet functions */
+enum {
+        /** The buffer memory has been allocated by libtrace and should be
+         * freed when the packet is destroyed. */
+        TRACE_PREP_OWN_BUFFER           =1,
+
+        /** The buffer memory is externally-owned and must not be freed by 
+         * libtrace when the packet is destroyed. */
+        TRACE_PREP_DO_NOT_OWN_BUFFER    =0
+};
+
+
 /** Event types 
  * see \ref libtrace_eventobj_t and \ref trace_event
  */
